--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.12",
+        "realrashid/sweet-alert": "^7.0",
         "wire-elements/modal": "^1.0"
     },
     "require-dev": {
