--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.12",
+        "rawilk/laravel-form-components": "^8.1",
         "realrashid/sweet-alert": "^7.0",
         "spatie/image": "^2.2",
         "wire-elements/modal": "^1.0"
