--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "rawilk/laravel-form-components": "^8.1",
         "realrashid/sweet-alert": "^7.0",
         "spatie/image": "^2.2",
+        "unicodeveloper/laravel-paystack": "^1.1",
         "wire-elements/modal": "^1.0"
     },
     "require-dev": {
