--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "rawilk/laravel-form-components": "^8.1",
         "realrashid/sweet-alert": "^7.0",
         "spatie/image": "^2.2",
+        "spatie/laravel-permission": "^5.10",
         "unicodeveloper/laravel-paystack": "^1.1",
         "wire-elements/modal": "^1.0"
     },
