added some stuff to composer json

--- a/composer.json
+++ b/composer.json
@@ -43,13 +43,7 @@
     },
     "scripts": {
         "post-autoload-dump": [
-            "mkdir -p /tmp/views",
-            "mkdir -p /tmp/storage/logs",
-            "mkdir -p /tmp/storage/app/public",
-            "mkdir -p /tmp/storage/framework/cache/data",
-            "mkdir -p /tmp/storage/framework/sessions",
-            "mkdir -p /tmp/storage/framework/testing",
-            "mkdir -p /tmp/storage/framework/views",
+            "mkdir -p ./bootstrap/cache/",
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
         ],
