added post-install cmd to composer json

--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,10 @@
         }
     },
     "scripts": {
+        "post-install-cmd": [
+            "chmod -R 755 bootstrap\/cache",
+            "php artisan cache:clear"
+         ],
         "post-autoload-dump": [
             "mkdir -p ./bootstrap/cache/",
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
