added mkdir with app in the autoload-dump

--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,7 @@
     },
     "scripts": {
         "post-autoload-dump": [
-            "mkdir -p /app/bootstrap/cache",
+            "mkdir -p app/bootstrap/cache",
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
         ],
