added config cache and change the writable permission

--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,7 @@
             "mkdir -p /app/storage/framework/cache",
             "mkdir -p /app/storage/framework/views",
             "mkdir -p /app/storage/framework/sessions",
-            "php artisan config:clear",
+            "php artisan config:cache",
             "sudo chmod -R 755 /app/bootstrap/cache/",
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
