--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,7 @@
             "mkdir -p /app/storage/framework/views",
             "mkdir -p /app/storage/framework/sessions",
             "php artisan config:cache",
-            "sudo chmod -R 755 /app/bootstrap/cache/",
+            "sudo chown -R 755 /app/bootstrap/cache/",
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
         ],
